--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <ul class="skip-links">
+    <li><a href="#nav">Jump to nav</a></li>
+    <li><a href="#main">Jump to content</a></li>
+    <li><a href="#about">Jump to about</a></li>
+  </ul>
   <header>
 
   </header>
