Create nav links and add word mark, ran through Spritebot

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Big Sky Ranch Sanctuary</title>
+  <title>Big Sky Ranch Ranch</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -16,7 +16,19 @@
     <li><a href="#about">Jump to about</a></li>
   </ul>
   <header>
-
+    <nav tabindex="0" id="nav">
+      <ul class="nav-wrapper">
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Adopt</a></li>
+        <li><a href="">Sponsor an Animal</a></li>
+        <li><a href="">Give</a></li>
+        <li><a href="">Volunteer</a></li>
+        <li><a href="">Events</a></li>
+        <li><a href="">Media</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section>
