--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <li><a href="#about">Jump to about</a></li>
   </ul>
   <header>
+    <div class="grid wordmark island">
+      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+        <img src="images/wordmark.svg" alt="">
+      </div>
+    </div>
     <nav tabindex="0" id="nav">
       <ul class="nav-wrapper">
         <li><a href="">Home</a></li>
