--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sintony:700" rel="stylesheet">
 </head>
 <body>
   <ul class="skip-links">
@@ -22,7 +23,7 @@
       </div>
     </div>
     <nav tabindex="0" id="nav">
-      <ul class="nav-wrapper">
+      <ul class="nav-wrapper list-group milli">
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
         <li><a href="">Adopt</a></li>
