Add landmark roles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Big Sky Ranch Ranch</title>
+  <title>Big Sky Ranch</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -11,18 +11,20 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sintony:700" rel="stylesheet">
 </head>
 <body>
+
   <ul class="skip-links">
     <li><a href="#nav">Jump to nav</a></li>
     <li><a href="#main">Jump to content</a></li>
     <li><a href="#about">Jump to about</a></li>
   </ul>
-  <header>
+
+  <header role="banner">
     <div class="grid wordmark island">
       <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
-        <img src="images/wordmark.svg" alt="">
+        <img src="images/wordmark.svg" alt="Big sky ranch wordmark">
       </div>
     </div>
-    <nav tabindex="0" id="nav">
+    <nav tabindex="0" id="nav" role="navigation">
       <ul class="nav-wrapper list-group milli">
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
@@ -36,10 +38,12 @@
       </ul>
     </nav>
   </header>
+
   <main>
     <section>
 
     </section>
   </main>
+
 </body>
 </html>
