--- a/index.html
+++ b/index.html
@@ -18,25 +18,23 @@
     <li><a href="#about">Jump to about</a></li>
   </ul>
 
-  <header role="banner">
-    <div class="grid wordmark island">
-      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+  <header role="banner" class="max-width">
+    <div class="grid grid-bottom">
+      <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
         <img src="images/wordmark.svg" alt="Big sky ranch wordmark">
       </div>
+
+      <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
+        <nav tabindex="0" id="nav" role="navigation">
+          <ul class="nav-wrapper list-group milli" id="menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">Our Animals</a></li>
+            <li><a href="">Adopt</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-    <nav tabindex="0" id="nav" role="navigation">
-      <ul class="nav-wrapper list-group milli">
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Adopt</a></li>
-        <li><a href="">Sponsor an Animal</a></li>
-        <li><a href="">Give</a></li>
-        <li><a href="">Volunteer</a></li>
-        <li><a href="">Events</a></li>
-        <li><a href="">Media</a></li>
-        <li><a href="">Contact Us</a></li>
-      </ul>
-    </nav>
   </header>
 
   <main>
