--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
         <nav tabindex="0" id="nav" role="navigation">
-          <ul class="nav-wrapper list-group milli" id="menu">
+          <ul class="nav-wrapper list-group milli text-upper" id="menu">
             <li><a href="">Home</a></li>
             <li><a href="">Our Animals</a></li>
             <li><a href="">Adopt</a></li>
