Responsive banner image

--- a/index.html
+++ b/index.html
@@ -21,25 +21,31 @@
   <header role="banner" class="max-width">
     <div class="grid grid-bottom">
       <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
-        <img src="images/wordmark.svg" alt="Big sky ranch wordmark">
+        <img src="images/wordmark.svg" alt="Big sky ranch">
       </div>
 
       <div class="unit xs-1 s-1 m-1 l-3-4 xl-3-4">
         <nav tabindex="0" id="nav" role="navigation">
-          <ul class="nav-wrapper list-group milli text-upper" id="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">Our Animals</a></li>
-            <li><a href="">Adopt</a></li>
-            <li><a href="">Contact Us</a></li>
+          <ul class="nav-wrapper list-group milli text-upper">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="animals.html">Our Animals</a></li>
+            <li><a href="rescue.html">Adopt</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
 
-  <main>
-    <section>
-
+  <main role="main">
+    <section id="content">
+      <div class="grid banner-container">
+        <div class="unit banner-wrapper">
+          <!-- <div class="overlay"></div> -->
+          <img class="img-flex relative" src="images/cat-lady.jpg" alt="" aria-label="A young woman on her porch holding a cat">
+          <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
+        </div>
+      </div>
     </section>
   </main>
 
