Add overlay to banner image and text-shadow to content

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container">
+      <div class="grid banner-container" aria-label="A young woman on her porch holding a cat">
         <div class="unit banner-wrapper">
-          <!-- <div class="overlay"></div> -->
-          <img class="img-flex relative" src="images/cat-lady.jpg" alt="" aria-label="A young woman on her porch holding a cat">
           <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
+          <p class="absolute island">Kemptville's animal sanctuary for abused and unwanted animals.</p>
         </div>
       </div>
     </section>
