Create section for main content
Export images, edit OL to have coloured numbers, and create clipping
path for images

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
   <ul class="skip-links">
     <li><a href="#nav">Jump to nav</a></li>
-    <li><a href="#main">Jump to content</a></li>
+    <li><a href="#main">Jump to main</a></li>
+    <li><a href="#content">Jump to content</a></li>
     <li><a href="#about">Jump to about</a></li>
   </ul>
 
-  <header role="banner" class="max-width">
+  <header role="banner" class="max-width pad-t-1-2 pad-b-1-2">
     <div class="grid grid-bottom">
       <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 wordmark island">
         <img src="images/wordmark.svg" alt="Big sky ranch">
@@ -43,6 +44,35 @@
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
           <p class="absolute island">Kemptville's animal sanctuary for abused and unwanted animals.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="max-width">
+      <div class="grid grid-middle">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 gutter-2">
+          <p>We rehabilitate abused or injured animals, as well as take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
+          <p class="red bold">Non-profit #: 80508 6543 RROOO1</p>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+          <img class="img-flex clip-right" src="images/baby-goats.jpg" alt="" aria-label="A baby goat climbing a tree trunk">
+        </div>
+      </div>
+
+      <div class="grid grid-middle">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="" aria-label="A man holding the reins of a horse while petting his dog">
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 gutter-2">
+          <h2 class="red tera">Our focus on behalf of animal welfare is to</h2>
+          <ol class="main-ol">
+            <li class="push-1-4">
+              <p>Improve relations between animals & humans</p>
+            </li>
+            <li>
+              <p>Educate people to a higher level of understanding when it comes to any animal-related issue</p>
+            </li>
+          </ol>
         </div>
       </div>
     </section>
