--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section id="about" class="max-width">
       <div class="grid grid-middle">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 gutter-2">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
           <p>We rehabilitate abused or injured animals, as well as take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
           <p class="red bold">Non-profit #: 80508 6543 RROOO1</p>
         </div>
@@ -63,11 +63,11 @@
         <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
           <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="" aria-label="A man holding the reins of a horse while petting his dog">
         </div>
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 gutter-2">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
           <h2 class="red tera">Our focus on behalf of animal welfare is to</h2>
           <ol class="main-ol">
-            <li class="push-1-4">
-              <p>Improve relations between animals & humans</p>
+            <li>
+              <p class="push-1-4">Improve relations between animals & humans</p>
             </li>
             <li>
               <p>Educate people to a higher level of understanding when it comes to any animal-related issue</p>
@@ -78,5 +78,37 @@
     </section>
   </main>
 
+  <footer role="contentinfo">
+    <div class="grid max-width micro pad-top pad-bottom island">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+        <h3 class="kilo bold text-upper push-1-2">Visit us</h3>
+        <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>
+          810 Pelton Road<br>
+          Kemptville, ON</p>
+          <ul class="list-group push-0">
+            <li>
+              <i class="icon i-24 push-r-1-4">
+                <img src="images/icon-phone.svg" alt="Call icon">
+              </i>
+              <a href="tel:613-258-7118" class="icon-label">613-258-7118</a>
+            </li>
+          </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+        <h3 class="kilo bold text-upper push-1-2">Site map</h3>
+        <ul class="block list-group push-0">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="animals.html">Our Animals</a></li>
+          <li><a href="rescue.html">Adopt</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+        <h3 class="kilo bold text-upper push-1-2">Stay Connected</h3>
+        <a href="https://www.facebook.com/BigSkyRanchAnimalSanctuary"><img class="i-48 push-r-1-2" src="images/icon-facebook.svg" alt="Facebook link icon"></a>
+        <a href="https://twitter.com/BigSkyRanch1"><img class="i-48 push-r-1-2" src="images/icon-twitter.svg" alt="Twitter link icon"></a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
