--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   </main>
 
   <footer role="contentinfo">
-    <div class="grid max-width micro pad-top pad-bottom island">
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+    <div class="grid max-width micro pad-top gutter">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Visit us</h3>
         <p class="push-1-2">Big Sky Ranch Animal Sanctuary<br>
           810 Pelton Road<br>
@@ -94,7 +94,7 @@
             </li>
           </ul>
       </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 push">
         <h3 class="kilo bold text-upper push-1-2">Site map</h3>
         <ul class="block list-group push-0">
           <li><a href="index.html">Home</a></li>
@@ -103,7 +103,7 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 connect">
         <h3 class="kilo bold text-upper push-1-2">Stay Connected</h3>
         <a href="https://www.facebook.com/BigSkyRanchAnimalSanctuary"><img class="i-48 push-r-1-2" src="images/icon-facebook.svg" alt="Facebook link icon"></a>
         <a href="https://twitter.com/BigSkyRanch1"><img class="i-48 push-r-1-2" src="images/icon-twitter.svg" alt="Twitter link icon"></a>
