--- a/index.html
+++ b/index.html
@@ -50,22 +50,20 @@
 
     <section id="about" class="max-width">
       <div class="grid grid-middle">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-          <p>We rehabilitate abused or injured animals, as well as take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
-          <p class="red bold">Non-profit #: 80508 6543 RROOO1</p>
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
+          <h2 class='red tera'>We rehabilitate abused or injured animals</h2>
+          <p>We take in any unwanted animal. The Sanctuary provides quality care for as many animals as our funding allows and does not put any time restriction on animals in our care.</p>
+          <p class="red bold push-2">Non-profit #: 80508 6543 RROOO1</p>
         </div>
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
           <img class="img-flex clip-right" src="images/baby-goats.jpg" alt="" aria-label="A baby goat climbing a tree trunk">
         </div>
       </div>
 
       <div class="grid grid-middle">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="" aria-label="A man holding the reins of a horse while petting his dog">
-        </div>
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 gutter-2">
           <h2 class="red tera">Our focus on behalf of animal welfare is to</h2>
-          <ol class="main-ol">
+          <ol class="main-ol push-2">
             <li>
               <p class="push-1-4">Improve relations between animals & humans</p>
             </li>
@@ -73,6 +71,9 @@
               <p>Educate people to a higher level of understanding when it comes to any animal-related issue</p>
             </li>
           </ol>
+        </div>
+        <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="" aria-label="A man holding the reins of a horse while petting his dog">
         </div>
       </div>
     </section>
