Add new image to animals.html banner
New classes to simplify CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Big Sky Ranch</title>
+  <title>Big Sky Ranch - Home</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container" aria-label="A young woman on her porch holding a cat">
+      <div class="grid banner-container banner-home" aria-label="A young woman on her porch holding a cat">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
           <p class="absolute island">Kemptville's animal sanctuary for abused and unwanted animals.</p>
