Add basic content in rescue page
Banner image was also added

--- a/animals.html
+++ b/animals.html
@@ -40,9 +40,10 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container banner-animals" aria-label="A young woman on her porch holding a cat">
+      <div class="grid banner-container banner-animals" aria-label="A dog looking away pensively from under a blanket">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Animals available for sponsorship</h1>
+          <p class="absolute island">Your monthly donation goes directly back to the animals in our care. </p>
         </div>
       </div>
     </section>
