--- a/animals.html
+++ b/animals.html
@@ -16,7 +16,7 @@
     <li><a href="#nav">Jump to nav</a></li>
     <li><a href="#main">Jump to main</a></li>
     <li><a href="#content">Jump to content</a></li>
-    <li><a href="#about">Jump to about</a></li>
+    <li><a href="#animals">Jump to animals</a></li>
   </ul>
 
   <header role="banner" class="max-width pad-t-1-2 pad-b-1-2">
@@ -44,6 +44,68 @@
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Animals available for sponsorship</h1>
           <p class="absolute island">Your monthly donation goes directly back to the animals in our care. </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="animals">
+      <div class="grid grid-stretch max-width pet-container">
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/chihuahua-resting.jpg" alt="" aria-label="A chihuahua resting on a blanket">
+          <h3>Milo</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/dog-outside.jpg" alt="" aria-label="A black dog with brown eyebrows looking at the camera">
+          <h3>Jeep</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/majestic-horse.jpg" alt="" aria-label="A horse with air-brushed hair looking at the camera">
+          <h3>Jack</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/fluffy-cat.jpg" alt="" aria-label="A chihuahua resting on a blanket">
+          <h3>Milo</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+      </div>
+
+      <div class="grid grid-stretch max-width pet-container">
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/chihuahua-resting.jpg" alt="" aria-label="A chihuahua resting on a blanket">
+          <h3>Milo</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/dog-outside.jpg" alt="" aria-label="A black dog with brown eyebrows looking at the camera">
+          <h3>Jeep</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/majestic-horse.jpg" alt="" aria-label="A horse with air-brushed hair looking at the camera">
+          <h3>Jack</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+        </div>
+
+        <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute">
+          <img class="img-flex" src="images/fluffy-cat.jpg" alt="" aria-label="A chihuahua resting on a blanket">
+          <h3>Milo</h3>
+          <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
+          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
         </div>
       </div>
     </section>
