Add aria-labels to adopt me links

--- a/animals.html
+++ b/animals.html
@@ -54,58 +54,58 @@
           <img class="img-flex" src="images/chihuahua-resting.jpg" alt="" aria-label="A chihuahua resting on a blanket">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Milo">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-outside.jpg" alt="" aria-label="A black dog with brown eyebrows looking at the camera">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jeep">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/majestic-horse.jpg" alt="" aria-label="A horse with air-brushed hair looking at the camera">
           <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Jack">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/fluffy-cat.jpg" alt="" aria-label="A fluffy cat laying outside">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
+          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Kathy</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Kathy">Adopt Me</a>
         </div>
       </div>
 
       <div class="grid grid-stretch max-width pet-container">
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/brown-cat.jpg" alt="" aria-label="A cat with big eyes looking at the camera">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
+          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Stacey</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Stacey">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/dog-mutt.jpg" alt="" aria-label="A dirty dog in a pen">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jeep</h3>
+          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Faun</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Faun">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/pink-piglet.jpg" alt="" aria-label="A piglet with hay on her nose">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Jack</h3>
+          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Cassie</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Adopt Cassie">Adopt Me</a>
         </div>
 
         <div class="unit xs-1 s-1-2 m-1-2 l-1-4 xl-1-4 pet gutter unit-content-distribute pad-b-2">
           <img class="img-flex" src="images/goat-front.jpg" alt="" aria-label="A black goat with a red collar">
-          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Milo</h3>
+          <h3 class="push-1-4 giga red text-upper pad-t-1-2">Nickel</h3>
           <p class="content-fill">Milo is an energetic and loving chihuahua. His favourite pastimes include chasing squirrels and sleeping on chouch headrests.</p>
-          <a href="rescue.html" class="btn btn-ghost content-shrink">Adopt Me</a>
+          <a href="rescue.html" class="btn btn-ghost content-shrink" aria-label="Read Nickel">Adopt Me</a>
         </div>
       </div>
     </section>
