Change aria-labels to alt tags

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container banner-home" aria-label="A young woman on her porch holding a cat">
+      <div class="grid banner-container banner-home" alt="A young woman on her porch holding a cat">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
           <p class="absolute island">Kemptville's animal sanctuary for abused and unwanted animals.</p>
@@ -56,7 +56,7 @@
           <p class="red bold push-2">Non-profit #: 80508 6543 RROOO1</p>
         </div>
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-          <img class="img-flex clip-right" src="images/baby-goats.jpg" alt="" aria-label="A baby goat climbing a tree trunk">
+          <img class="img-flex clip-right" src="images/baby-goats.jpg" alt="A baby goat climbing a tree trunk">
         </div>
       </div>
 
@@ -73,7 +73,7 @@
           </ol>
         </div>
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="" aria-label="A man holding the reins of a horse while petting his dog">
+          <img class="img-flex clip-left" src="images/horse-cowboy.jpg" alt="A man holding the reins of a horse while petting his dog">
         </div>
       </div>
     </section>
