Remove alt from divs

--- a/adopt.html
+++ b/adopt.html
@@ -40,7 +40,7 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container banner-rescue" aria-label="A goat being fed grains from a paper bag">
+      <div class="grid banner-container banner-rescue">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Adopt an animal</h1>
           <p class="absolute island">With a few exceptions, most of the animals at the Big Sky Ranch Animal Sanctuary are available for adoption.</p>
