--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container banner-home" alt="A young woman on her porch holding a cat">
+      <div class="grid banner-container banner-home">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Welcome to The Big Sky Ranch</h1>
           <p class="absolute island">Kemptville's animal sanctuary for abused and unwanted animals.</p>
