--- a/rescues.html
+++ b/rescues.html
@@ -40,7 +40,7 @@
 
   <main role="main">
     <section id="content">
-      <div class="grid banner-container banner-animals" alt="A dog looking away pensively from under a blanket">
+      <div class="grid banner-container banner-animals">
         <div class="unit banner-wrapper">
           <h1 class="absolute island">Animals available for sponsorship</h1>
           <p class="absolute island">Your monthly donation goes directly back to the animals in our care. </p>
