--- a/adopt.html
+++ b/adopt.html
@@ -51,16 +51,16 @@
     </section>
 
     <section id="form">
-      <div class="grid icons-container max-width text-center">
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+      <div class="grid grid-bottom icons-container max-width text-center">
+        <div class="unit xs-1-3 s-1-3 m-1-3 l-1-3 xl-1-3 gutter">
           <h2 class="red giga push-1-2">Inquire</h2>
           <img class="img-flex" src="images/icon-inquire.svg" alt="step 1 inquire icon">
         </div>
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+        <div class="unit xs-1-3 s-1-3 m-1-3 l-1-3 xl-1-3 gutter">
           <h2 class="red giga push-1-2">Visit</h2>
           <img class="img-flex" src="images/icon-visit.svg" alt="step 2 visit icon">
         </div>
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+        <div class="unit xs-1-3 s-1-3 m-1-3 l-1-3 xl-1-3 gutter">
           <h2 class="red giga push-1-2">Bring Home</h2>
           <img class="img-flex" src="images/icon-home.svg" alt="step 3 bring home icon">
         </div>
